target/generated-sources/antlr4/HypeParser.java
// Generated from Hype.g4 by ANTLR 4.4

import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HypeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__33=1, T__32=2, T__31=3, T__30=4, T__29=5, T__28=6, T__27=7, T__26=8, 
		T__25=9, T__24=10, T__23=11, T__22=12, T__21=13, T__20=14, T__19=15, T__18=16, 
		T__17=17, T__16=18, T__15=19, T__14=20, T__13=21, T__12=22, T__11=23, 
		T__10=24, T__9=25, T__8=26, T__7=27, T__6=28, T__5=29, T__4=30, T__3=31, 
		T__2=32, T__1=33, T__0=34, ID=35, INT=36, NEWLINE=37, WS=38, STRING=39, 
		COLOR=40, WORD=41;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'img'", "'title'", "'head'", "';'", "'{'", "'='", 
		"'}'", "'if'", "'for'", "'base'", "'int'", "'html'", "'('", "'*'", "'.'", 
		"'center'", "'p'", "'body'", "'!doctype'", "'script'", "'to'", "'link'", 
		"'basefont'", "'#'", "'div'", "'else'", "'meta'", "'hr'", "')'", "'+'", 
		"'span'", "'br'", "'-'", "ID", "INT", "NEWLINE", "WS", "STRING", "COLOR", 
		"WORD"
	};
	public static final int
		RULE_start = 0, RULE_html = 1, RULE_doctype = 2, RULE_webpage_body = 3, 
		RULE_head = 4, RULE_body = 5, RULE_id_and_classes = 6, RULE_classes = 7, 
		RULE_parameters = 8, RULE_parameters_again = 9, RULE_parameter = 10, RULE_head_items = 11, 
		RULE_head_item = 12, RULE_brackets = 13, RULE_for_loop = 14, RULE_content = 15, 
		RULE_p_content = 16, RULE_tag = 17, RULE_if_statement = 18, RULE_par_expression = 19, 
		RULE_expression = 20, RULE_assignment = 21, RULE_int_assignment = 22, 
		RULE_int_evaluator = 23, RULE_int_mul_div_expr = 24, RULE_int_atom = 25;
	public static final String[] ruleNames = {
		"start", "html", "doctype", "webpage_body", "head", "body", "id_and_classes", 
		"classes", "parameters", "parameters_again", "parameter", "head_items", 
		"head_item", "brackets", "for_loop", "content", "p_content", "tag", "if_statement", 
		"par_expression", "expression", "assignment", "int_assignment", "int_evaluator", 
		"int_mul_div_expr", "int_atom"
	};

	@Override
	public String getGrammarFileName() { return "Hype.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	/** Map variable name to Integer object holding value */
	HashMap memory = new HashMap();
	String htmlString = "";
	int tabCount = 0;
	String head = "";
	String classes = "";
	String parameters = "";
	String content = "";
	String pcontent = "";

	public HypeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public HtmlContext html() {
			return getRuleContext(HtmlContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); html();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HtmlContext extends ParserRuleContext {
		public Webpage_bodyContext webpage_body;
		public Webpage_bodyContext webpage_body() {
			return getRuleContext(Webpage_bodyContext.class,0);
		}
		public DoctypeContext doctype() {
			return getRuleContext(DoctypeContext.class,0);
		}
		public HtmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_html; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterHtml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitHtml(this);
		}
	}

	public final HtmlContext html() throws RecognitionException {
		HtmlContext _localctx = new HtmlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_html);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); doctype();
			setState(55); match(T__21);
			setState(56); match(T__28);
			setState(57); ((HtmlContext)_localctx).webpage_body = webpage_body();
			setState(58); match(T__26);
			htmlString += "<html>\n" + ((HtmlContext)_localctx).webpage_body.text +  "</html>";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DoctypeContext extends ParserRuleContext {
		public DoctypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doctype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterDoctype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitDoctype(this);
		}
	}

	public final DoctypeContext doctype() throws RecognitionException {
		DoctypeContext _localctx = new DoctypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_doctype);
		try {
			setState(63);
			switch (_input.LA(1)) {
			case T__14:
				enterOuterAlt(_localctx, 1);
				{
				setState(61); match(T__14);
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Webpage_bodyContext extends ParserRuleContext {
		public String text;
		public HeadContext head;
		public BodyContext body;
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public Webpage_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_webpage_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterWebpage_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitWebpage_body(this);
		}
	}

	public final Webpage_bodyContext webpage_body() throws RecognitionException {
		Webpage_bodyContext _localctx = new Webpage_bodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_webpage_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); ((Webpage_bodyContext)_localctx).head = head();
			setState(66); ((Webpage_bodyContext)_localctx).body = body();
			((Webpage_bodyContext)_localctx).text =  ((Webpage_bodyContext)_localctx).head.text + ((Webpage_bodyContext)_localctx).body.text;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadContext extends ParserRuleContext {
		public String text;
		public Head_itemsContext head_items;
		public Head_itemsContext head_items() {
			return getRuleContext(Head_itemsContext.class,0);
		}
		public HeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitHead(this);
		}
	}

	public final HeadContext head() throws RecognitionException {
		HeadContext _localctx = new HeadContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_head);
		try {
			setState(76);
			switch (_input.LA(1)) {
			case T__30:
				enterOuterAlt(_localctx, 1);
				{
				setState(69); match(T__30);
				setState(70); match(T__28);
				setState(71); ((HeadContext)_localctx).head_items = head_items();
				setState(72); match(T__26);
				((HeadContext)_localctx).text =  "<head>\n" + ((HeadContext)_localctx).head_items.text + "</head>\n";
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 2);
				{
				((HeadContext)_localctx).text =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public String text;
		public ParametersContext parameters;
		public ContentContext content;
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); match(T__15);
			setState(79); ((BodyContext)_localctx).parameters = parameters();
			setState(80); match(T__28);
			setState(81); ((BodyContext)_localctx).content = content();
			setState(82); match(T__26);
				((BodyContext)_localctx).text =  "<body";
											if(!((BodyContext)_localctx).parameters.text.equals("")) {
												_localctx.text += " " + ((BodyContext)_localctx).parameters.text;
											}
											_localctx.text += ">\n" + ((BodyContext)_localctx).content.text + "</body>\n";
											content = "";
										
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_and_classesContext extends ParserRuleContext {
		public String text;
		public Token ID;
		public ClassesContext classes;
		public TerminalNode ID() { return getToken(HypeParser.ID, 0); }
		public ClassesContext classes() {
			return getRuleContext(ClassesContext.class,0);
		}
		public Id_and_classesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_and_classes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterId_and_classes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitId_and_classes(this);
		}
	}

	public final Id_and_classesContext id_and_classes() throws RecognitionException {
		Id_and_classesContext _localctx = new Id_and_classesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_id_and_classes);
		try {
			setState(93);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(85); match(T__9);
				setState(86); ((Id_and_classesContext)_localctx).ID = match(ID);
				setState(87); ((Id_and_classesContext)_localctx).classes = classes();
				((Id_and_classesContext)_localctx).text =  "id=\"" + (((Id_and_classesContext)_localctx).ID!=null?((Id_and_classesContext)_localctx).ID.getText():null) + "\" " + ((Id_and_classesContext)_localctx).classes.text;
				}
				break;
			case EOF:
			case T__32:
			case T__31:
			case T__28:
			case T__26:
			case T__24:
			case T__23:
			case T__22:
			case T__20:
			case T__18:
			case T__17:
			case T__16:
			case T__13:
			case T__11:
			case T__10:
			case T__8:
			case T__7:
			case T__6:
			case T__5:
			case T__2:
			case T__1:
			case ID:
			case WORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(90); ((Id_and_classesContext)_localctx).classes = classes();
				((Id_and_classesContext)_localctx).text =  ((Id_and_classesContext)_localctx).classes.text; classes = "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassesContext extends ParserRuleContext {
		public String text;
		public Token ID;
		public TerminalNode ID() { return getToken(HypeParser.ID, 0); }
		public ClassesContext classes() {
			return getRuleContext(ClassesContext.class,0);
		}
		public ClassesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterClasses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitClasses(this);
		}
	}

	public final ClassesContext classes() throws RecognitionException {
		ClassesContext _localctx = new ClassesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classes);
		try {
			setState(101);
			switch (_input.LA(1)) {
			case T__18:
				enterOuterAlt(_localctx, 1);
				{
				setState(95); match(T__18);
				setState(96); ((ClassesContext)_localctx).ID = match(ID);
				setState(97); classes();
				classes = (((ClassesContext)_localctx).ID!=null?((ClassesContext)_localctx).ID.getText():null) + " " + classes;
																((ClassesContext)_localctx).text =  "class=\""+classes.trim()+"\"";
				}
				break;
			case EOF:
			case T__32:
			case T__31:
			case T__28:
			case T__26:
			case T__24:
			case T__23:
			case T__22:
			case T__20:
			case T__17:
			case T__16:
			case T__13:
			case T__11:
			case T__10:
			case T__8:
			case T__7:
			case T__6:
			case T__5:
			case T__2:
			case T__1:
			case ID:
			case WORD:
				enterOuterAlt(_localctx, 2);
				{
				((ClassesContext)_localctx).text =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public String text;
		public Parameters_againContext parameters_again;
		public Parameters_againContext parameters_again() {
			return getRuleContext(Parameters_againContext.class,0);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitParameters(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameters);
		try {
			setState(109);
			switch (_input.LA(1)) {
			case T__20:
				enterOuterAlt(_localctx, 1);
				{
				setState(103); match(T__20);
				setState(104); ((ParametersContext)_localctx).parameters_again = parameters_again();
				setState(105); match(T__4);
				((ParametersContext)_localctx).text =  ((ParametersContext)_localctx).parameters_again.text; parameters = "";
				}
				break;
			case EOF:
			case T__32:
			case T__31:
			case T__28:
			case T__26:
			case T__24:
			case T__23:
			case T__22:
			case T__17:
			case T__16:
			case T__13:
			case T__11:
			case T__10:
			case T__8:
			case T__7:
			case T__6:
			case T__5:
			case T__2:
			case T__1:
			case ID:
			case WORD:
				enterOuterAlt(_localctx, 2);
				{
				((ParametersContext)_localctx).text =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameters_againContext extends ParserRuleContext {
		public String text;
		public ParameterContext parameter;
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public Parameters_againContext parameters_again() {
			return getRuleContext(Parameters_againContext.class,0);
		}
		public Parameters_againContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters_again; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterParameters_again(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitParameters_again(this);
		}
	}

	public final Parameters_againContext parameters_again() throws RecognitionException {
		Parameters_againContext _localctx = new Parameters_againContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameters_again);
		try {
			setState(116);
			switch (_input.LA(1)) {
			case ID:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(111); ((Parameters_againContext)_localctx).parameter = parameter();
				setState(112); parameters_again();
				parameters = ((Parameters_againContext)_localctx).parameter.text + " "+ parameters; ((Parameters_againContext)_localctx).text =  parameters.trim();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				((Parameters_againContext)_localctx).text =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public String text;
		public Token ID;
		public Token STRING;
		public Token COLOR;
		public List<TerminalNode> ID() { return getTokens(HypeParser.ID); }
		public TerminalNode COLOR() { return getToken(HypeParser.COLOR, 0); }
		public TerminalNode ID(int i) {
			return getToken(HypeParser.ID, i);
		}
		public TerminalNode STRING() { return getToken(HypeParser.STRING, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitParameter(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_parameter);
		try {
			setState(134);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118); ((ParameterContext)_localctx).ID = match(ID);
				setState(119); match(T__27);
				setState(120); ((ParameterContext)_localctx).STRING = match(STRING);
				((ParameterContext)_localctx).text =  (((ParameterContext)_localctx).ID!=null?((ParameterContext)_localctx).ID.getText():null) + "=" + (((ParameterContext)_localctx).STRING!=null?((ParameterContext)_localctx).STRING.getText():null);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122); ((ParameterContext)_localctx).ID = match(ID);
				setState(123); match(T__27);
				setState(124); ((ParameterContext)_localctx).ID = match(ID);
				((ParameterContext)_localctx).text =  (((ParameterContext)_localctx).ID!=null?((ParameterContext)_localctx).ID.getText():null) + "=" + (((ParameterContext)_localctx).ID!=null?((ParameterContext)_localctx).ID.getText():null);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126); ((ParameterContext)_localctx).ID = match(ID);
				setState(127); match(T__27);
				setState(128); ((ParameterContext)_localctx).COLOR = match(COLOR);
				((ParameterContext)_localctx).text =  (((ParameterContext)_localctx).ID!=null?((ParameterContext)_localctx).ID.getText():null) + "=" + (((ParameterContext)_localctx).COLOR!=null?((ParameterContext)_localctx).COLOR.getText():null);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(130); ((ParameterContext)_localctx).ID = match(ID);
				((ParameterContext)_localctx).text =  (((ParameterContext)_localctx).ID!=null?((ParameterContext)_localctx).ID.getText():null);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(132); ((ParameterContext)_localctx).STRING = match(STRING);
				((ParameterContext)_localctx).text =  (((ParameterContext)_localctx).STRING!=null?((ParameterContext)_localctx).STRING.getText():null);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Head_itemsContext extends ParserRuleContext {
		public String text;
		public Head_itemContext head_item;
		public Head_itemsContext head_items() {
			return getRuleContext(Head_itemsContext.class,0);
		}
		public Head_itemContext head_item() {
			return getRuleContext(Head_itemContext.class,0);
		}
		public Head_itemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head_items; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).enterHead_items(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HypeListener ) ((HypeListener)listener).exitHead_items(this);
		}
	}
